--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
 </head>
-
+<!--<body>-->
 <body>
   <div class="top-container">
     <h1 class="Name">Ali Here.</h1>
     <img class="banner"src="Banner.png" alt="">
     <h1> Engineer By Day</h1>
     <img class="day" src="day.png" alt="day">
-  <!--  <img class="engineer" src="transparentoption2.png" alt="">-->
+  <!--<img class="engineer" src="transparentoption2.png" alt="">-->
   <img class="night" src="night.png" alt="day">
     <h1>Programmer By Night</h1>
   <!--  <img class="programmer" src="https://image.flaticon.com/sprites/new_packs/291723-programming.png" alt="">-->
