--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
 </head>
-<!--<body>-->
+
 <body>
   <div class="top-container">
     <h1 class="Name">Ali Here.</h1>
     <img class="banner"src="Banner.png" alt="">
     <h1> Engineer By Day</h1>
     <img class="day" src="day.png" alt="day">
-  <!--<img class="engineer" src="transparentoption2.png" alt="">-->
+  <!--  <img class="engineer" src="transparentoption2.png" alt="">-->
   <img class="night" src="night.png" alt="day">
     <h1>Programmer By Night</h1>
   <!--  <img class="programmer" src="https://image.flaticon.com/sprites/new_packs/291723-programming.png" alt="">-->
@@ -30,8 +31,25 @@
   <h3 class="AboutMe">About Me</h3>
   <p class="Iam">Hi, I am an Engineer and working towards becoming a full stack web developer. I like coding and love problem solving during the development process. I have gain good understanding in HTML, CSS languages. I am hoping to gain
   more knowledge as I progress in my BootCamp course. I work as a mechanical engineer but hoping to switch my field to pursue the career in the coding field.</p>
+  <h3 class="AboutMe">Skills</h3>
+  <p class="Iam"> <ul class="Iam">
+  <li>Web Design</li>
+<li>HTML, CSS</li>
+<li>Engineering</li>
+<li>QE&A</li>
+<li>AutoCAD</li>
+<li>Critical Thinking and Analysis</li>
+</ul></p>
   </div>
-  <div class="bottom-container"></div>
+  <div class="bottom-container">
+  <h1 class="Contact">Contact Me</h1>
+<i class="fas fa-envelope"></i>
+<i class="fab fa-facebook-square"></i>
+<i class="fab fa-twitter"></i>
+<i class="fab fa-instagram"></i>
+</div>
+
+
 </body>
 
 </html>
