--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Ali Go </title>
   <link href="D:\UdemyWebDev2020\Web Dev - Project 1\favicon.ico" rel="icon" type="image/x-icon" />
-  <link rel="stylesheet" href="D:\UdemyWebDev2020\Web Dev - Project 1\styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
